force-app/main/default/objects/CCX_Activity__c/CCX_Activity__c.object-meta.xml
<CustomObject>
    <label>CCX Activity</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>CCX Activity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCX Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>