force-app/main/default/objects/CCX_Activity__c/fields/CCX_Activity_Name__c.field-meta.xml
<CustomField>
    <fullName>CCX_Activity_Name__c</fullName>
    <label>CCX Activity Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>