force-app/main/default/objects/CCX_Activity__c/fields/CCX_Actual_Budget__c.field-meta.xml
<CustomField>
    <fullName>CCX_Actual_Budget__c</fullName>
    <label>CCX Actual Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>