force-app/main/default/objects/CCX_Activity__c/fields/CCX_Description__c.field-meta.xml
<CustomField>
    <fullName>CCX_Description__c</fullName>
    <label>CCX Description</label>
    <type>TextArea</type>
</CustomField>