force-app/main/default/objects/CCX_Activity__c/fields/CCX_Task__c.field-meta.xml
<CustomField>
    <fullName>CCX_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCX Task</label>
    <referenceTo>CCX_Task__c</referenceTo>
    <relationshipLabel>CCX Activities</relationshipLabel>
    <relationshipName>CCX_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>